Upgrade to JDK 11