@@ -19,8 +19,6 @@
 
 package net.clementraynaud.skoice.lang;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import org.bukkit.ChatColor;
 
 import java.util.Map;
@@ -28,56 +26,56 @@ import java.util.Map;
 import static net.clementraynaud.skoice.Skoice.getPlugin;
 
 public enum Logger {
-    PLUGIN_ENABLED_INFO(Maps.newHashMap(ImmutableMap.of(
+    PLUGIN_ENABLED_INFO(Map.of(
             Lang.EN, "Plugin enabled.",
-            Lang.FR, "Plugin activé."))),
+            Lang.FR, "Plugin activé.")),
 
-    PLUGIN_DISABLED_INFO(Maps.newHashMap(ImmutableMap.of(
+    PLUGIN_DISABLED_INFO(Map.of(
             Lang.EN, "Plugin disabled.",
-            Lang.FR, "Plugin désactivé."))),
+            Lang.FR, "Plugin désactivé.")),
 
-    CONFIGURATION_COMPLETE_INFO(Maps.newHashMap(ImmutableMap.of(
+    CONFIGURATION_COMPLETE_INFO(Map.of(
             Lang.EN, "Configuration complete. Type \"/link\" on your Discord server to link your Discord account to Minecraft.",
-            Lang.FR, "Configuration terminée. Tapez \"/link\" sur votre serveur Discord pour relier votre compte Discord à Minecraft."))),
+            Lang.FR, "Configuration terminée. Tapez \"/link\" sur votre serveur Discord pour relier votre compte Discord à Minecraft.")),
 
-    BOT_CONNECTED_INFO(Maps.newHashMap(ImmutableMap.of(
+    BOT_CONNECTED_INFO(Map.of(
             Lang.EN, "Your bot is connected.",
-            Lang.FR, "Votre bot est connecté."))),
+            Lang.FR, "Votre bot est connecté.")),
 
-    OUTDATED_VERSION_WARNING(Maps.newHashMap(ImmutableMap.of(
+    OUTDATED_VERSION_WARNING(Map.of(
             Lang.EN, ChatColor.YELLOW + "You are using an outdated version ({runningVersion}). Download the latest version ({latestVersion}) here: " + ChatColor.AQUA + "https://www.spigotmc.org/resources/skoice-proximity-voice-chat.82861/" + ChatColor.YELLOW + ".",
-            Lang.FR, ChatColor.YELLOW + "Vous utilisez une version obsolète ({runningVersion}). Téléchargez la dernière version ({latestVersion}) ici : " + ChatColor.AQUA + "https://www.spigotmc.org/resources/skoice-proximity-voice-chat.82861/" + ChatColor.YELLOW + "."))),
+            Lang.FR, ChatColor.YELLOW + "Vous utilisez une version obsolète ({runningVersion}). Téléchargez la dernière version ({latestVersion}) ici : " + ChatColor.AQUA + "https://www.spigotmc.org/resources/skoice-proximity-voice-chat.82861/" + ChatColor.YELLOW + ".")),
 
-    NO_TOKEN_WARNING(Maps.newHashMap(ImmutableMap.of(
+    NO_TOKEN_WARNING(Map.of(
             Lang.EN, ChatColor.YELLOW + "Token not set. Join your Minecraft server to set up Skoice.",
-            Lang.FR, ChatColor.YELLOW + "Token non défini. Rejoignez votre serveur Minecraft pour configurer Skoice."))),
+            Lang.FR, ChatColor.YELLOW + "Token non défini. Rejoignez votre serveur Minecraft pour configurer Skoice.")),
 
-    NO_LANGUAGE_WARNING(Maps.newHashMap(ImmutableMap.of(
-            Lang.EN, ChatColor.YELLOW + "Language not set. Type \"/configure\" on your Discord server to set up Skoice."))),
+    NO_LANGUAGE_WARNING(Map.of(
+            Lang.EN, ChatColor.YELLOW + "Language not set. Type \"/configure\" on your Discord server to set up Skoice.")),
 
-    MULTIPLE_GUILDS_WARNING(Maps.newHashMap(ImmutableMap.of(
+    MULTIPLE_GUILDS_WARNING(Map.of(
             Lang.EN, ChatColor.YELLOW + "Your bot is on multiple Discord servers. Type \"/configure\" on your Discord server to choose one.",
-            Lang.FR, ChatColor.YELLOW + "Votre bot est sur plusieurs serveurs Discord. Tapez \"/configure\" sur votre serveur Discord pour en choisir un."))),
+            Lang.FR, ChatColor.YELLOW + "Votre bot est sur plusieurs serveurs Discord. Tapez \"/configure\" sur votre serveur Discord pour en choisir un.")),
 
-    NO_LOBBY_ID_WARNING(Maps.newHashMap(ImmutableMap.of(
+    NO_LOBBY_ID_WARNING(Map.of(
             Lang.EN, ChatColor.YELLOW + "Lobby not set. Type \"/configure\" on your Discord server to set up Skoice.",
-            Lang.FR, ChatColor.YELLOW + "Salon vocal principal non défini. Tapez \"/configure\" sur votre serveur Discord pour configurer Skoice."))),
+            Lang.FR, ChatColor.YELLOW + "Salon vocal principal non défini. Tapez \"/configure\" sur votre serveur Discord pour configurer Skoice.")),
 
-    NO_RADIUS_WARNING(Maps.newHashMap(ImmutableMap.of(
+    NO_RADIUS_WARNING(Map.of(
             Lang.EN, ChatColor.YELLOW + "Radius not set. Type \"/configure\" on your Discord server to set up Skoice.",
-            Lang.FR, ChatColor.YELLOW + "Rayons non définis. Tapez \"/configure\" sur votre serveur Discord pour configurer Skoice."))),
+            Lang.FR, ChatColor.YELLOW + "Rayons non définis. Tapez \"/configure\" sur votre serveur Discord pour configurer Skoice.")),
 
-    MISSING_ACCESS_ERROR(Maps.newHashMap(ImmutableMap.of(
+    MISSING_ACCESS_ERROR(Map.of(
             Lang.EN, ChatColor.RED + "You did not grant your bot the permission to register commands on your Discord server (\"applications.commands\").",
-            Lang.FR, ChatColor.RED + "Vous n'avez pas accordé à votre bot la permission de déclarer des commandes sur votre serveur Discord (\"applications.commands\")."))),
+            Lang.FR, ChatColor.RED + "Vous n'avez pas accordé à votre bot la permission de déclarer des commandes sur votre serveur Discord (\"applications.commands\").")),
 
-    BOT_COULD_NOT_CONNECT_ERROR(Maps.newHashMap(ImmutableMap.of(
+    BOT_COULD_NOT_CONNECT_ERROR(Map.of(
             Lang.EN, ChatColor.RED + "Your bot could not connect. To update the token, type \"/skoice token\" followed by the new token.",
-            Lang.FR, ChatColor.RED + "Votre bot n'a pas pu se connecter. Pour mettre à jour le token, tapez \"/skoice token\" suivi du nouveau token."))),
+            Lang.FR, ChatColor.RED + "Votre bot n'a pas pu se connecter. Pour mettre à jour le token, tapez \"/skoice token\" suivi du nouveau token.")),
 
-    UNEXPECTED_VALUE(Maps.newHashMap(ImmutableMap.of(
+    UNEXPECTED_VALUE(Map.of(
             Lang.EN, "Unexpected value: {value}",
-            Lang.FR, "Valeur inattendue : {value}")));
+            Lang.FR, "Valeur inattendue : {value}"));
 
     private final Map<Lang, String> messages;
 
